[package]
name = "accents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.189"
ron = "0.8.1"
pink_accents = { git = "https://github.com/Fogapod/pink_accents", rev = "c4e64c428de4f67e0aaa50083ec7cb8fd2da54cc" }
