[package]
name = "maps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
networking = { path = "../networking" }
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
serde = { version = "*", features = ["derive"] }
enum-map = "2.4.1"
arrayvec = "0.7.2"
