[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
networking_derive = { version = "0.1.0", path = "./networking_derive" }
bevy = "0.8"
bevy_renet = "0.0.5"
bytes = "1.2.1"
serde = { version = "*", features = ["derive"] }
bincode = "1.3.3"
bevy_rapier3d = { version = "0.16.0" }
flume = "0.10.14"
