[package]
name = "speech"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
bevy_common_assets = { workspace = true }
serde = { workspace = true }
ron = "0.8.1"
sayit = "0.1.2"
